--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 
 
     <script src="index.js" charset="utf-8"></script>
-    <footer>Made with ♥ in London.</footer>
+    <footer class="footer">Made with ♥ in London.</footer>
   </body>
 </html>
