--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1 di="title">Drum 🥁 Kit</h1>
+    <h1 di="title">Drum 🥁 Kit</h1>~
     <div class="set">
       <button class="w drum">W</button>
       <button class="a drum">a</button>
