play sounds by javascript

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <h1 di="title">Drum 🥁 Kit</h1>~
+    <h1 di="title">Drum 🥁 Kit</h1>
     <div class="set">
       <button class="w drum">W</button>
       <button class="a drum">a</button>
