--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1 di="title">Drum 🥁 Kit</h1>
     <div class="set">
-      <button class="w drum">W</button>
+      <button class="w drum">w</button>
       <button class="a drum">a</button>
       <button class="s drum">s</button>
       <button class="d drum">d</button>
